# NXmind

./: App.tsx  package.json  types.ts
.github/workflows/: release.yml
components/: MindMap.tsx  Settings.tsx  useMindMapInteraction.ts  useMindMapLayout.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
